--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@strapi/plugin-cloud": "5.33.0",
     "@strapi/plugin-users-permissions": "5.33.0",
     "@strapi/strapi": "5.33.0",
+    "@wecre8websites/strapi-page-builder": "^1.1.2",
     "better-sqlite3": "12.4.1",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
