--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strapi-health-compiler",
+  "name": "health-compiler-strapi-cms",
   "version": "0.1.0",
   "private": true,
   "description": "A Strapi application",
